--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -7,21 +7,8 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v2
-      - name: set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
-      - name: Build with Gradle
-        run: ./gradlew build
-
   apk:
-    name: Generate APK
+    name: Clean, Build and Generate APK
     runs-on: ubuntu-latest
 
     steps:
@@ -30,6 +17,12 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
+
+      - name: Clean
+        run: ./gradlew clean --stacktrace
+
+      - name: Build
+        run: ./gradlew build --stacktrace
 
       - name: Build debug APK
         run: bash ./gradlew assembleDebug --stacktrace
