--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -30,5 +30,5 @@ jobs:
       - name: Upload APK
         uses: actions/upload-artifact@v1
         with:
-          name: app
+          name: apk
           path: app/build/outputs/apk/debug/app-debug.apk
