--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,11 +23,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ui.home.ResultActivity"></activity>
         <activity
             android:name=".ui.quiz.QuizActivity"
-            android:screenOrientation="portrait"
-            android:label="Quiz it is!">
-        </activity>
+            android:label="Quiz it is!"
+            android:screenOrientation="portrait"></activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
